--- a/gloo/docs/installation/gateway/docker-compose-consul/docker-compose.yaml
+++ b/gloo/docs/installation/gateway/docker-compose-consul/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.4'
 
 services:
 
@@ -6,6 +6,7 @@ services:
   # note: this consul instance is being run in dev mode
   # and should not be used in production
   consul:
+    container_name: consul
     image: "consul:${CONSUL_VERSION:-1.5.2}"
     working_dir: /
     command:
@@ -24,6 +25,7 @@ services:
   # note: this vault instance is being run in dev mode
   # and should not be used in production
   vault:
+    container_name: vault
     image: "vault:${VAULT_VERSION:-1.1.3}"
     working_dir: /
     command:
@@ -37,11 +39,13 @@ services:
 
   # example application, the swagger petstore
   petstore:
+    container_name: petstore
     image: ${PETSTORE_REPO:-quay.io/solo-io}/petstore:v1
     restart: always
 
   # Gloo components
   gloo:
+    container_name: gloo
     image: "${GLOO_REPO:-quay.io/solo-io}/gloo:${GLOO_VERSION:-0.18.3}"
     working_dir: /
     command:
@@ -53,6 +57,7 @@ services:
     restart: always
 
   discovery:
+    container_name: discovery
     image: "${GLOO_REPO:-quay.io/solo-io}/discovery:${GLOO_VERSION:-0.18.3}"
     working_dir: /
     command:
@@ -62,6 +67,7 @@ services:
     restart: always
 
   gateway:
+    container_name: gateway
     image: "${GLOO_REPO:-quay.io/solo-io}/gateway:${GLOO_VERSION:-0.18.3}"
     working_dir: /
     command:
@@ -71,6 +77,7 @@ services:
     restart: always
 
   gateway-proxy:
+    container_name: proxy
     image: ${GLOO_REPO:-quay.io/solo-io}/gloo-envoy-wrapper:${GLOO_VERSION:-0.18.3}
     entrypoint: ["envoy"]
     command: ["-c", "/config/envoy.yaml", "--disable-hot-restart"]
